i_843 Remove deprecated Integer references
Change new Integer() to Integer.valueOf() to avoid deprecation later.  (Request PR fix)